--- a/utswebprojek1/css/style.css
+++ b/utswebprojek1/css/style.css
@@ -2,12 +2,14 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 }
 
 body {
     background-color: #f8f8f8;
+    font-family: 'Poppins', sans-serif;
     color: #333;
+    min-height: 150vh;
 }
 
 header {
@@ -31,12 +33,12 @@ header {
 }
 
 .logo img {
-    height: 40px; /* Adjust the height as needed */
+    height: 40px;
     margin-right: 10px;
 }
 
 .logo span {
-    font-size: 24px; /* Adjust the font size as needed */
+    font-size: 24px;
     font-weight: bold;
 }
 
@@ -76,6 +78,7 @@ article {
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
 
 h1, h2 {
     color: #333;
@@ -173,7 +176,7 @@ footer {
 
 /* Responsive Styles */
 @media only screen and (max-width: 600px) {
-    section {
+    section, article {
         margin: 10px;
         padding: 10px;
     }
